src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
*
{
    margin: 0; padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}
:root
{
    --mainColor: #100e19;
    --white: #fff;
    --darkGray: #222;
    /* --red: rgb(223, 21, 48); */
    --red: #ea003d;
}
body
{
    background: var(--mainColor)!important;
    width: 100%;
    min-height: 100vh;
    color: var(--white);
    font-family: 'Poppins', sans-serif;
}
#root
{
    max-width: 1200px;
    margin: 0 auto;
}
@media (max-width: 1200px)
{
    #root
    {
        padding-left: 15px;
        padding-right: 15px;
    }
}

